# luatemplate

./: CMakeLists.txt  README.md
include/: luatemplate.h
src/: luatemplate.c  luatemplate_pub.c  reader.c
src/include/: luatemplate_lib.h
test/: sample.lt  test.c  ttest.lua
